Build user authentication APIs - we'll implement the Login and Register functionality.