@@ -1,12 +1,14 @@
 package com.retzy.Configuration;
 
 import jakarta.servlet.http.HttpServletRequest;
-import org.jspecify.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -14,13 +16,14 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(
-            HttpSecurity http) throws Exception{
+            HttpSecurity http) {
 
         return http
                 .sessionManagement(management ->
@@ -38,11 +41,16 @@ public class SecurityConfig {
                 ).build();
     }
 
+    @Bean
+    public PasswordEncoder passwordEncoder(){
+        return new BCryptPasswordEncoder();
+    }
+
 
 private CorsConfigurationSource corsConfigurationSource() {
     return new CorsConfigurationSource() {
         @Override
-        public @Nullable CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
+        public @NonNull CorsConfiguration getCorsConfiguration(@NonNull HttpServletRequest request) {
             CorsConfiguration cfg = new CorsConfiguration();
             cfg.setAllowedOrigins(
                     Arrays.asList(
@@ -53,7 +61,7 @@ private CorsConfigurationSource corsConfigurationSource() {
             cfg.setAllowedMethods(Collections.singletonList("*"));
             cfg.setAllowCredentials(true);
             cfg.setAllowedHeaders(Collections.singletonList("*"));
-            cfg.setExposedHeaders(Arrays.asList("Authorization"));
+            cfg.setExposedHeaders(List.of("Authorization"));
             cfg.setMaxAge(3600L);
             return cfg;
         }
